fixed the about section title and and gap

--- a/src/Components/about.css
+++ b/src/Components/about.css
@@ -1,7 +1,4 @@
 /* about section ⬆️ */
-#about-section #section-title {
-  margin-bottom: 90px;
-}
 
 #about-content {
   display: flex;
